# doi-jekyll

./: .env.sample.sh  .zenodo.json  LICENSE  README.md  doi-jekyll.py  requirements.txt  setup.cfg
doijekyll/: cli.py  doijekyll.py  metadata.py
examples/: _config.yml
examples/_authors/: andreas.md
examples/_posts/: 2022-09-12-doi-jekyll-example.md
