[metadata]
name = doijekyll
version = 0.1.2
author = Andreas Herten
description = Register DOIs for Jekyll blog posts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = doi, datacite, jekyll, blog, science
license = MIT

[options]
packages = find:
install_requires = file: requirements.txt

[options.entry_points]
console_scripts =
    doi-jekyll = doijekyll.doijekyll:main